# inline-feedback

./: .env.example  .eslintrc.js  .gitignore  .markdownlint.json  README.md  console-debug.js  debug-extension.js  demo_enhanced_ontology.js  demo_project_debbie_phase2.js  load-debug-tools.js  package-lock.json  package.json  pyproject.toml  test-page.html
.github/workflows/: build.yml  release.yml  test.yml
scripts/: build.js  package.js  test-extension.js
src/: manifest.json
src/background/: api-handler.js  service-worker.js  storage-manager.js
src/config/: config.js
src/content/: content-script.js  logger.js  ontology-highlighter.js  pdf-extractor.js  selection-handler.js  ui-feedback.js
src/debbie-integration/: debbie-api-client.js  gold-standard-pmid-loader.js  owl2dict-converter.js  project-debbie-coordinator.js
src/ontology/: base-ontology.js  enhanced-medical-ontology.js  medical-devices.js  medical-materials.js  research-evidence-db.js
src/popup/: popup.css  popup.html  popup.js
src/styles/: ontology.css  overlay.css
tests/: conftest.py  test_enhanced_ontology.py  test_extension.py  test_project_debbie_integration.py
tests/integration/: __init__.py  test_extension.py
tests/unit/: __init__.py  test_ontology.py
