[project]
name = "inline-feedback"
version = "1.0.0"
description = "AI-powered Chrome extension for PDF document assistance with medical materials ontology"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Robert Ford", email = "robert@example.com" }
]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
# Target Python Version
target-version = "py310"

# Line length
line-length = 88  # Match Black's default
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "S",   # flake8-bandit
]

# Ignore specific rules
lint.ignore = [
    # "E501",  # line length violations
]
lint.unfixable = []  # Rules that should not be fixed automatically

# Allow autofix behavior for specific rules
fix = true

# Exclude files/folders
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Per-file-ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["S101"]      # Ignore assert statements in tests


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "-v"

[tool.mypy]
# Python version
python_version = "3.10"

# Strict mode
strict = true

# Imports management
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error messages
pretty = true
show_error_codes = true
show_column_numbers = true

# Per-module settings example
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
